# learning_quadrupedal_locomotion_over_challenging_terrain_supplementary

./: .gitignore  CMakeLists.txt  LICENSE  README.md
applications/: main.cpp  test_c010.cpp  test_c100.cpp
docs/: README.md
include/common/: RandomNumberGenerator.hpp  SimpleMLPLayer.hpp  math.hpp  message_macros.hpp  message_stream.hpp
include/environment/: IK_c010.hpp  IK_c100.hpp  environment.hpp  environment_c010.hpp  environment_c100.hpp
include/environment/visualizer/: GaitLogger.hpp  guiState.hpp  raisimKeyboardCallback.hpp  visSetupCallback.hpp
include/graph/: GraphLoader.hpp  Policy.hpp
rsc/actuator/C100/: seaModel_2500.txt
rsc/actuator/c010/: seaModel_A.txt  seaModel_B.txt
rsc/controller/c010/tcn1/: graph.pb
rsc/controller/c010/tcn100/: graph.pb
rsc/controller/c010/tcn20/: graph.pb
rsc/controller/c010/teacher/: graph.pb  param.txt
rsc/controller/c100/: graph.pb
rsc/robot/: LICENSE
rsc/robot/c010/meshes/: battery_3_0_4_mesh.dae  drive_3_0_2_mesh.dae  shank_3_1_1_mesh.dae
rsc/robot/c010/urdf/: anymal_minimal.urdf
rsc/robot/c100/meshes/: blackfly_3_1_1_mesh.dae  face_3_1_1_mesh.dae  handle_3_1_1_mesh.dae  hatch_3_1_1_mesh.dae  hip_3_1_1_mesh.dae  realsense_d435_3_1_1_mesh.dae  shank_3_1_1_mesh_mirrored.dae  thigh_3_1_1_mesh.dae
rsc/robot/c100/urdf/: anymal.urdf
rsc/robot/chimera/meshes/: base_3_1_1_mesh.dae  bottom_shell_3_1_1_mesh.dae  cage_3_1_1_mesh.dae  foot_3_1_1_mesh.dae  hip_3_1_1_mesh_mirrored.dae  remote_3_1_1_mesh.dae  top_shell_3_1_1_mesh.dae  velodyne_3_1_1_mesh.dae
rsc/robot/chimera/urdf/: anymal.urdf.raw  anymal_minimal.urdf
